CHATS_SIT/force-app/main/default/objects/T_APPLN_ACTIVITY__c.object
<CustomObject>
    <description>CBMS TANF application activity information.</description>
  <!--  <enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>CDE_TYPE_ACTV__c</fullName>
        <label>Activity Type Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_ACTV_PRIM__c</fullName>
        <label>Activity Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_ACTV_PRIM__c</fullName>
        <label>Activity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_INDIVIDUAL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IDN_INDIVIDUAL</label>
        <referenceTo>T_APPLN_INDIV__c</referenceTo>
        <relationshipLabel>Application Activities</relationshipLabel>
        <relationshipName>Application_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Application Activity</label>
    <nameField>
        <displayFormat>AACT-{0}</displayFormat>
        <label>Application Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>